--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enchanted Love Realm by Shobhit Dev</title>
+    <title>A Love Letter For My Longdistance Love </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Parisienne&family=Quicksand:wght@300;500;700&family=Marck+Script&display=swap');
 
@@ -177,8 +177,8 @@
     <div class="love-glow"></div>
     <div class="magic-container">
         <h1>Hey my love, 💖</h1>
-        <p class="enchanted-text">I have a special surprise for you! ✨</p>
-        <a href="main.html" class="magic-button">Tap here to see it! 😘🎁🌸</a>
+        <p class="enchanted-text">A Special Surprise For You✨</p>
+        <a href="main.html" class="magic-button">Click Here 😘🎁🌸</a>
     </div>
 
     <script>
