--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shobhit ❤️ Sona | Eternal Love</title>
+    <title>Vijay ❤️ Pooja | Cute Love Story</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pacifico&family=Dancing+Script:wght@700&display=swap');
 
@@ -211,7 +211,7 @@
 
             <div class="signature">
                 Forever Yours,<br>
-                Your Shobhit 💝
+                Your Vijay 💝
             </div>
         </div>
     </div>
@@ -239,12 +239,15 @@
 
         // Typewriter Effect with Emojis
         const text = `My love,💖
-Your eyes make time stand still...💑
-Your smile erases all my sorrows...✨💞
-The fear of losing you scares me,😢
-But we are one, bound forever...💓
-You are my heartbeat, my soul...💗
-Stay with me always, my love...💟`;
+Every beat of my heart whispers your name...💓
+Your voice is my calm in every storm...🌧️🌈
+The distance may test us, but it can’t break us...🌍💫
+My soul aches for your touch, your presence...😢🤲
+Yet, your love wraps around me like a warm hug...🤗❤️
+You and I — we are written in the stars...🌠💞
+Forever yours, in this life and the next...♾️💍
+
+I love you endlessly...💘`;
 
         let index = 0;
         const loveText = document.getElementById('loveText');
